# ui2code-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  check_deps.py  docker-compose.yaml  pyproject.toml  pyproject_backup.toml  quick_start.py  requirements-dev.txt  requirements.txt  run.sh  run_streamlit.py  setup.py  tailwind.config.js
app/: streamlit_app.py
app/models/openai-model/: config.json
data/evaluate/: docs_ui_code_en.jsonl  eval_retrieval_aggregated.csv  eval_retrieval_per_query.csv  qrels_ui_code_en.csv
docs/: 1-diagrama-workflow.html  2-diagrama-pipeline-rag.html  informe.out  informe.tex  system-architecture-complete.md  system-architecture-diagram.md  workflow.html
docs/report/: .gitignore  Conclusiones.tex  Desarrollo de la solución.tex  Presentación del Problema.tex  Resultados.tex  main.tex  portada.tex
informe/: Informe final - Procesamiento del lenguaje natural III.docx  fix_tree.sh  informe.aux  informe.out  informe.tex  informe.toc
src/: config.py  config.yaml  logging_config.py
src/agents/: __init__.py  code_rag_agent.py  code_rag_agent_proxy.py  valid_html.py  visual_agent.py  visual_agent_proxy.py
src/agents/code_a2a_agent/: Dockerfile  __main__.py  code_a2a_agent.py  code_a2a_agent_executor.py  example.env  readme.md
src/agents/code_a2a_agent/src/: config.py
src/agents/code_a2a_agent/src/agent/: code_a2a_agent_executor.py  code_agent.py  code_agent_mock.py  code_agent_with_guardrails.py
src/agents/code_a2a_agent/src/guardrails/schemas/: code_agent_schema.py
src/agents/code_a2a_agent/src/server/: main.py
src/agents/code_a2a_agent/src/texts/: prompts.py
src/agents/code_agent/: Dockerfile  __main__.py  code_a2a_agent_executor.py  code_agent_mock.py  code_rag_agent.py  code_rag_agent_proxy.py  entrypoint.sh  example.env  pyproject.toml  readme.md  setup.sh
src/agents/code_agent/src/: config.py
src/agents/code_agent/src/agent/: code_a2a_agent_executor.py  code_agent.py  code_agent_mock.py  code_agent_with_guardrails.py  code_rag_agent_proxy.py
src/agents/code_agent/src/guardrails/shemas/: code_agent_schema.py
src/agents/code_agent/src/guardrails/validators/: dom_whitelist.py  theme_tokens_only.py  used_components_subset.py  valid_html.py
src/agents/code_agent/src/server/: __main__.py  main.py
src/agents/code_agent/src/texts/: html_examples.py  prompts.py
src/agents/orchestator_a2a_agent/: __main__.py
src/agents/orchestator_agent/: __main__.py  orchestator_agent.py  utils.py
src/agents/rag_agent/: __main__.py  rag_a2a_agent_executor.py  rag_agent.py
src/agents/rag_agent/rag/adapters/: __init__.py  pinecone_adapter.py
src/agents/rag_agent/rag/core/: __init__.py  documents.py  io_utils.py  metrics.py  rag_pipeline.py  rag_summary.py
src/agents/rag_agent/rag/evaluators/: evaluate_retrieval.py
src/agents/rag_agent/rag/ingestion/: __init__.py  pdf_loader.py  websight_loader.py
src/agents/rag_agent/rag/retrievers/: __init__.py  bm25_retriever.py  cross_encoder_reranker.py  fusion.py
src/agents/visual_a2a_agent/: Dockerfile  __main__.py  example.env  pyproject.toml  readme.md  visual_a2a_agent.py  visual_a2a_agent_executor.py
src/agents/visual_a2a_agent/src/: config.py
src/agents/visual_a2a_agent/src/agent/: visual_a2a_agent_executor.py  visual_agent.py  visual_agent_mock.py  visual_agent_with_guardrails.py
src/agents/visual_a2a_agent/src/helpers/: utils.py
src/agents/visual_a2a_agent/src/server/: main.py
src/agents/visual_a2a_agent/src/texts/: prompts.py
src/agents/visual_agent/: Dockerfile  __main__.py  entrypoint.sh  pyproject.toml  readme.md  visual_a2a_agent_executor.py  visual_agent.py  visual_agent_mock.py  visual_agent_proxy.py
src/agents/visual_agent/guardrails/validators/: valid_html.py  valid_schema_json.py
src/agents/visual_agent/src/: config.py
src/agents/visual_agent/src/agent/: visual_a2a_agent_executor.py  visual_agent.py  visual_agent_mock.py  visual_agent_proxy.py  visual_agent_with_guardrails.py
src/agents/visual_agent/src/guardrails/schemas/: visual_agent_schema.py
src/agents/visual_agent/src/guardrails/validators/: confidence_coverage.py  valid_schema_json.py
src/agents/visual_agent/src/server/: __main__.py  main.py
src/agents/visual_agent/src/texts/: prompts.py  types.py
src/app/: main.py  streamlit_app.py  streamlit_app_backup.py
src/app/pages/: 01_query_interface.py  02_ui_to_code.py  03_evaluations.py  04_system_status.py  05_corpus_information.py
src/app/services/: agents.py  rag_pipeline.py
src/app/ui/: header.py  preloader.py  theme.py
src/app/ui/components/: code_preview.py
src/app/views/: corpus_info.py  evaluations.py  query_interface.py  system_status.py  ui_to_code.py
src/core/: html_utils.py  style_tokens.py  tw_validator.py
src/rag/: __init__.py
src/rag/core/: documents.py  io_utils.py  rag_pipeline.py
src/rag/evaluators/: evaluate_retrieval.py
src/rag/ingestion/: pdf_loader.py  websight_loader.py
src/rag/retrievers/: bm25_retriever.py  cross_encoder_reranker.py  fusion.py
src/runtime/: __init__.py
src/runtime/adapters/: pinecone_adapter.py
src/scripts/: download_websight.py  guardrails_config.sh  seed_ui_examples.py
tests/: todo
ui_examples/: websight_sample_0000.json  websight_sample_0001.json  websight_sample_0002.json  websight_sample_0003.html  websight_sample_0003.json  websight_sample_0004.html  websight_sample_0004.json  websight_sample_0005.json  websight_sample_0006.json  websight_sample_0007.json  websight_sample_0008.json  websight_sample_0009.json  websight_sample_0010.json  websight_sample_0011.json  websight_sample_0012.html  websight_sample_0012.json  websight_sample_0013.json  websight_sample_0014.json  websight_sample_0015.json  websight_sample_0016.html  websight_sample_0016.json  websight_sample_0017.json  websight_sample_0018.json  websight_sample_0019.json  websight_sample_0020.html  websight_sample_0020.json  websight_sample_0021.json  websight_sample_0022.json  websight_sample_0023.json  websight_sample_0024.json
(+6 files in other folders)
